correción de pre-footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,10 +11,10 @@ a.degradado:hover { background-image: url("https://navike21.com/wp-content/uploa
   h2 { font-size: 4rem; text-transform: uppercase; }
   h2 strong { color: #003268; }
   .to_work { background-image: url("https://navike21.com/wp-content/uploads/2018/03/degradado.svg"); background-size: 100%; background-repeat: repeat-y; }
-  .to_work h3 { color: #ffffff; font-size: 4rem; }
-  .to_work h4 { color: #ffffff; font-size: 2.2rem; }
+  .to_work h3 { color: #ffffff; font-size: 4rem; width: 100%; text-align: center; font-weight: 400; }
+  .to_work h4 { color: #ffffff; font-size: 2.2rem; width: 100%; text-align: center; font-weight: 400; }
   .to_work p { text-align: center; color: #ffffff; }
-  .to_work .enlace_towork { border: 1px solid #ffffff; color: #ffffff; }
+  .to_work .enlace_towork { border: 1px solid #ffffff; color: #ffffff; letter-spacing: 2px; text-transform: uppercase; }
   .to_work .enlace_towork:hover { background-color: #ffffff; color: #003268; } }
 @media all and (orientation: landscape) { .banner_principal { height: 90vh; margin-bottom: 5vh; }
   .enlace { padding: 15px 12vw; } }
