--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ a.degradado:hover { background-image: url("https://navike21.com/wp-content/uploa
 
 @media all and (min-width: 1px) { .banner_principal { background-position: center; background-repeat: no-repeat; background-size: cover; height: 40vh; margin-bottom: 2vh; }
   p { color: #808080; font-size: 1.8rem; text-align: justify; }
-  .enlace { font-size: 1.4rem; padding: 2vh 0; width: 5%; text-align: center; min-width: 100px; color: #ffffff; margin: 7vh auto; text-transform: uppercase; }
+  .enlace { font-size: 1.4rem; padding: 2vh 0; width: 19vw; text-align: center; min-width: 100px; color: #ffffff; margin: 7vh auto; text-transform: uppercase; }
   .bienvenida p { text-align: center; width: 100%; }
   h2 { font-size: 4rem; text-transform: uppercase; font-weight: 400; }
   h2 strong { color: #003268; font-weight: 400; }
@@ -16,7 +16,5 @@ a.degradado:hover { background-image: url("https://navike21.com/wp-content/uploa
   .to_work p { text-align: center; color: #ffffff; }
   .to_work .enlace_towork { border: 1px solid #ffffff; color: #ffffff; letter-spacing: 2px; }
   .to_work .enlace_towork:hover { background-color: #ffffff; color: #003268; } }
-@media all and (orientation: landscape) { .banner_principal { height: 90vh; margin-bottom: 5vh; }
-  .enlace { padding: 15px 12vw; } }
-@media all and (min-width: 801px) { .banner_principal { height: 100vh; margin-bottom: 5vh; }
-  .enlace { padding: 1.9vh 5vw; } }
+@media all and (orientation: landscape) { .banner_principal { height: 90vh; margin-bottom: 5vh; } }
+@media all and (min-width: 801px) { .banner_principal { height: 100vh; margin-bottom: 5vh; } }
