--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 * { font-family: "Quicksand", sans-serif; }
 
-.degradado { background-image: url("https://navike21.com/wp-content/uploads/2018/03/degradado.svg"); background-repeat: repeat-y; background-size: 100%; background-position: center; background-attachment: fixed; }
+.degradado { background-image: url("https://navike21.com/wp-content/uploads/2018/03/degradado.svg"); background-repeat: repeat-y; background-size: 106%; background-position: center; }
 
-a.degradado:hover { background-image: url("https://navike21.com/wp-content/uploads/2018/03/degradado_hover.svg"); background-repeat: repeat-y; background-size: 100%; background-position: center; background-attachment: fixed; }
+a.degradado:hover { background-image: url("https://navike21.com/wp-content/uploads/2018/03/degradado_hover.svg"); background-repeat: repeat-y; background-size: 106%; background-position: center; }
 
 @media all and (min-width: 1px) { .banner_principal { background-position: center; background-repeat: no-repeat; background-size: cover; height: 40vh; margin-bottom: 2vh; }
   p { color: #808080; font-size: 1.8rem; text-align: justify; }
