--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 
 h1, h2, h3, h4 { text-align: center; width: 80%; font-weight: 400; }
 
-h1, h2, h3 { text-transform: uppercase; }
+h1, h2, h3 { text-transform: uppercase; font-weight: 700; }
 
 a.degradado:hover { background-image: url("https://navike21.com/wp-content/uploads/2018/03/degradado_hover.svg"); background-repeat: repeat-y; background-size: 106%; background-position: center; }
 
@@ -12,8 +12,8 @@ a.degradado:hover { background-image: url("https://navike21.com/wp-content/uploa
   p { color: #808080; font-size: 1.6rem; text-align: justify; }
   .enlace { font-size: 1.4rem; padding: 2vh 0; width: 18vw; text-align: center; min-width: 180px; color: #ffffff; margin: 7vh auto; text-transform: uppercase; }
   .bienvenida p { width: 100%; margin: 3vh auto 1.5vh; }
-  h2 { font-size: 4rem; margin: 5vh auto; }
-  h2 strong { color: #003268; font-weight: 400; }
+  h2 { font-size: 4rem; margin: 10vh auto; }
+  h2 strong { color: #003268; font-weight: 700; }
   .to_work { background-image: url("https://navike21.com/wp-content/uploads/2018/04/degradado.svg"); background-size: 150%; background-repeat: repeat-y; padding-top: 7vh; }
   .to_work h3 { color: #ffffff; font-size: 4rem; }
   .to_work h4 { color: #ffffff; font-size: 2.2rem; margin: 3vh auto; }
