--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,11 +26,11 @@ a.degradado:hover { background-image: url("https://navike21.com/wp-content/uploa
   #capacidades div { position: relative; padding: 6vh 0; min-width: 90px; }
   #capacidades div h3 { position: absolute; bottom: 0; left: 0; right: 0; margin: auto; font-size: 1.4rem; text-transform: capitalize; font-weight: 700; }
   #capacidades div img { width: 78%; margin: auto; }
-  .ultimo_post h3 { font-weight: 700; width: 100%; text-align: left; font-size: 2rem; }
-  .ultimo_post h2 { margin-top: 0; margin-bottom: 2vh; font-size: 1.6rem; width: 100%; text-align: left; }
-  .ultimo_post .portada_last_post { height: 45vh; background-position: center; background-repeat: no-repeat; background-size: cover; }
-  .ultimo_post .contenido_wrapp, .ultimo_post .contenido_reciente { margin-bottom: 5vh; }
-  .ultimo_post .contenido_wrapp a { font-size: 1.4rem; padding: 2vh 0; width: 10vw; text-align: center; min-width: 180px; color: #ffffff; display: block; } }
+  .ultimo_post h3, .other_post h3 { font-weight: 700; width: 100%; text-align: left; font-size: 2rem; }
+  .ultimo_post h2, .other_post h2 { margin-top: 0; margin-bottom: 2vh; font-size: 1.6rem; width: 100%; text-align: left; }
+  .ultimo_post .portada_last_post, .other_post .portada_last_post { height: 45vh; background-position: center; background-repeat: no-repeat; background-size: cover; }
+  .ultimo_post .contenido_wrapp, .ultimo_post .contenido_reciente, .other_post .contenido_wrapp, .other_post .contenido_reciente { margin-bottom: 5vh; }
+  .ultimo_post .contenido_wrapp a, .other_post .contenido_wrapp a { font-size: 1.4rem; padding: 2vh 0; width: 10vw; text-align: center; min-width: 180px; color: #ffffff; display: block; } }
 @media all and (orientation: landscape) { .banner_principal { height: 90vh; margin-bottom: 5vh; }
   .bienvenida p { text-align: center; }
   #capacidades div { padding: 8vh 0 15vh; }
