Agregando formato a los últimos post

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,12 @@ a.degradado:hover { background-image: url("https://navike21.com/wp-content/uploa
   .ultimo_post h2, .other_post h2 { margin-top: 0; margin-bottom: 2vh; font-size: 1.6rem; width: 100%; text-align: left; }
   .ultimo_post .portada_last_post, .other_post .portada_last_post { height: 45vh; background-position: center; background-repeat: no-repeat; background-size: cover; }
   .ultimo_post .contenido_wrapp, .ultimo_post .contenido_reciente, .other_post .contenido_wrapp, .other_post .contenido_reciente { margin-bottom: 5vh; }
-  .ultimo_post .contenido_wrapp a, .other_post .contenido_wrapp a { font-size: 1.4rem; padding: 2vh 0; width: 10vw; text-align: center; min-width: 180px; color: #ffffff; display: block; } }
+  .ultimo_post .contenido_wrapp a, .other_post .contenido_wrapp a { font-size: 1.4rem; padding: 2vh 0; width: 10vw; text-align: center; min-width: 180px; color: #ffffff; display: block; }
+  .other_post article { margin: 1vh 0; }
+  .other_post article .portada_last_post { border: 1px solid #808080; }
+  .other_post article .contenido_reciente { font-size: 1.4rem; }
+  .other_post article h3 { font-size: 1.8rem; }
+  .other_post article h2 { font-size: 1.4rem; } }
 @media all and (orientation: landscape) { .banner_principal { height: 90vh; margin-bottom: 5vh; }
   .bienvenida p { text-align: center; }
   #capacidades div { padding: 8vh 0 15vh; }
