--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ a.degradado:hover { background-image: url("https://navike21.com/wp-content/uploa
   .ultimo_post .contenido_wrapp, .ultimo_post .contenido_reciente, .other_post .contenido_wrapp, .other_post .contenido_reciente { margin-bottom: 5vh; }
   .ultimo_post .contenido_wrapp a, .other_post .contenido_wrapp a { font-size: 1.4rem; padding: 2vh 0; width: 10vw; text-align: center; min-width: 180px; color: #ffffff; display: block; }
   .other_post { margin-top: 5vh; }
-  .other_post article { margin: 1vh 0; }
+  .other_post article { margin: 1vh 0; min-width: 30% !important; }
   .other_post article .portada_last_post { height: 30vh; }
   .other_post article .contenido_reciente { font-size: 1.4rem; }
   .other_post article h3 { font-size: 1.6rem; height: 50px; }
